--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -21,14 +21,11 @@ menu:
   分类: /categories/ || fa fa-archive
   标签: /tags/ || fa fa-tags
   归档: /archives/ || fa fa-folder-open
-  # 生活 || fas fa-list:
   #   图库: /gallery/ || fas fa-image   # 新增图库菜单
-  #书籍: /books/ || fas fa-book     # 新增书籍菜单
-  #   播客: /podcasts/ || fas fa-podcast
-  
+  书籍: /books/ || fas fa-book     # 新增书籍菜单
+  播客: /podcasts/ || fas fa-podcast
   链接: /links/ || fa fa-link
-  留言板: /comment/ || fa fa-paper-plane
-  
+  # 留言板: /comment/ || fa fa-paper-plane
   关于笔者: /about/ || fas fa-heart  
 
 
