--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -26,7 +26,7 @@ menu:
   播客: /podcasts/ || fas fa-podcast
   链接: /links/ || fa fa-link
   # 留言板: /comment/ || fa fa-paper-plane
-  关于笔者: /about/ || fas fa-heart  
+  关于: /about/ || fas fa-heart  
 
 
 # 本地搜索功能
